fix(ui): hide overflow on tooltip

--- a/ui/src/app/components/pieces/tooltip/tooltip.component.scss
+++ b/ui/src/app/components/pieces/tooltip/tooltip.component.scss
@@ -3,4 +3,5 @@
   opacity: 0;
   width: 0;
   height: 0;
+  overflow: hidden;
 }
